Bug 338302 - Modified does not show up in title bar
Summary: Modified does not show up in title bar
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-15 18:04 UTC by Andreas
Modified: 2020-06-18 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas 2014-08-15 18:04:18 UTC
When practicing modified doesn't show up in the title bar.

kF5 version
Comment 1 Andreas 2014-08-22 21:35:54 UTC
Git commit 73c5397f6fac7f598d2c5ea71ef3de167110f0c3 by Andreas Xavier.
Committed on 22/08/2014 at 18:58.
Pushed by axavier into branch 'KDE/4.14'.

Fix bugs: 338302 and 338417 title bar [modified] tag is inconsistent

Symptoms:
The [modified] in the title bar was inconsistent.

Problems:
1. The title bar was only connected to the dirty bit in the doc from
the Editor. Going directly welcome -> stats did not connect the title
bar to the dirty bit.
2.  Whenever a new document was created, new collection, welcome screen
etc. the title bar was disconnected.
3. In several places setModified was called on the kvocdoc when either
nothing changed or the kvocdoc should know better.

Solution:
The title bar is ParleyMainWindow's title bar. ParleyMainWindow also
know when the document is updated. I created a updateParleyDocument
so that ParleyMainWindow always knows when the doc changes and
slotFileNew so that anyone can ask ParleyMainWindow to update its
own title bar.

Not fixed: Parley still directly calls the setModified in kvocdoc
when it starts practice. kvocdoc needs to be fixed before that is
removed.
Related: bug 338417
FIXED-IN:4.14.1

M  +0    -7    src/editor/editor.cpp
M  +1    -10   src/parleydocument.cpp
M  +19   -1    src/parleymainwindow.cpp
M  +6    -0    src/parleymainwindow.h
M  +1    -0    src/practice/practicemainwindow.cpp
M  +0    -1    src/settings/documentproperties.cpp
M  +0    -1    src/settings/languageproperties.cpp
M  +1    -0    src/vocabulary/vocabularymodel.cpp
M  +1    -1    src/welcomescreen/welcomescreen.cpp

http://commits.kde.org/parley/73c5397f6fac7f598d2c5ea71ef3de167110f0c3
Comment 2 Andreas 2014-08-22 21:36:35 UTC
Git commit 487294f869f35b9c228cf18f82b5e2d141a0cee4 by Andreas Xavier.
Committed on 22/08/2014 at 18:58.
Pushed by axavier into branch 'master'.

Fix bugs: 338302 and 338417 title bar [modified] tag is inconsistent

Symptoms:
The [modified] in the title bar was inconsistent.

Problems:
1. The title bar was only connected to the dirty bit in the doc from
the Editor. Going directly welcome -> stats did not connect the title
bar to the dirty bit.
2.  Whenever a new document was created, new collection, welcome screen
etc. the title bar was disconnected.
3. In several places setModified was called on the kvocdoc when either
nothing changed or the kvocdoc should know better.

Solution:
The title bar is ParleyMainWindow's title bar. ParleyMainWindow also
know when the document is updated. I created a updateParleyDocument
so that ParleyMainWindow always knows when the doc changes and
slotFileNew so that anyone can ask ParleyMainWindow to update its
own title bar.

Not fixed: Parley still directly calls the setModified in kvocdoc
when it starts practice. kvocdoc needs to be fixed before that is
removed.
Related: bug 338417
FIXED-IN:4.14.1

M  +0    -7    src/editor/editor.cpp
M  +1    -10   src/parleydocument.cpp
M  +19   -1    src/parleymainwindow.cpp
M  +6    -0    src/parleymainwindow.h
M  +1    -0    src/practice/practicemainwindow.cpp
M  +0    -1    src/settings/documentproperties.cpp
M  +0    -1    src/settings/languageproperties.cpp
M  +1    -0    src/vocabulary/vocabularymodel.cpp
M  +1    -1    src/welcomescreen/welcomescreen.cpp

http://commits.kde.org/parley/487294f869f35b9c228cf18f82b5e2d141a0cee4
Comment 3 gjditchfield 2020-06-18 16:15:53 UTC
Git commit 06b1cede77c8c62c24281935bf404b62f06d1c94 by Glen Ditchfield.
Committed on 18/06/2020 at 16:06.
Pushed by gditchfield into branch 'release/20.04'.

Display all-day to-dos on their due date in the agenda view

The agenda view displays non-recurring all-day to-dos that are not overdue
on the day before their due date.  Recurring to-dos and non-all-day to-dos
are displayed correctly, on their due dates.

`displayIncidence()` deliberately displays to-dos due at midnight in the
event view at the end of the previous day, but that should not be done for
all-day to-dos.  This patch adds an all-day check.

The patch opportunistically removes two `setTime()` calls that duplicate
work done in initializers, and tidies a third.
Related: bug 417982

M  +4    -6    src/agenda/agendaview.cpp

https://invent.kde.org/pim/eventviews/commit/06b1cede77c8c62c24281935bf404b62f06d1c94